[package]
authors = ['Bryan Chen']
build = 'build.rs'
edition = '2018'
name = 'substrate-kitties'
version = '2.0.0'

[build-dependencies]
vergen = '3'

[workspace]
members = ['runtime']

[dependencies]
codec = { version = '1.0.6', package = 'parity-scale-codec' }
ctrlc = { version = '3.1', features = ['termination'] }
derive_more = '0.15.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.substrate-kitties-runtime]
path = 'runtime'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[[bin]]
name = 'substrate-kitties'
path = 'src/main.rs'

[profile.release]
panic = 'unwind'
