[package]
authors = ['Bryan Chen']
edition = '2018'
name = 'substrate-kitties-runtime'
version = '2.0.0'

[features]
default = ['std']
no_std = []
std = [
  'codec/std',
  'client/std',
  'rstd/std',
  'runtime-io/std',
  'support/std',
  'balances/std',
  'aura/std',
  'aura-primitives/std',
  'grandpa/std',
  'executive/std',
  'indices/std',
  'primitives/std',
  'sr-primitives/std',
  'randomness-collective-flip/std',
  'system/std',
  'timestamp/std',
  'sudo/std',
  'transaction-payment/std',
  'version/std',
  'serde',
  'safe-mix/std',
  'offchain-primitives/std',
  'substrate-session/std',
]

[build-dependencies]
wasm-builder-runner = { version = '1.0.3', package = 'substrate-wasm-builder-runner' }

[dependencies]
codec = { version = '1.0.6', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
safe-mix = { version = '1.0', default-features = false }
serde = { version = '1.0', optional = true, features = ['derive'] }

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-randomness-collective-flip'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-transaction-payment'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '5fde6d0882bd9943da28df6d40dc78714672dcca'
